[package]
edition = "2021"
name    = "esp32_ssd1306_i2c"
version = "0.1.0"

[[bin]]
name = "esp32_ssd1306_i2c"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
esp-backtrace = { version = "0.15.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32", "unstable"] }
embedded-hal-async = "1.0.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
tinygif = "0.0.4"
fugit = "0.3.7"
esp-println = { version = "0.13.0", features = ["esp32"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
